localization/v2.4.x/site/it/home/home.md
---
id: home.md
---
<div class="doc-h1-wrapper">
<p><h1 class="title">
Benvenuti in Milvus Docs!</h1></p>
<p><h2 class="sub-title">
Qui imparerete cos'è Milvus e come installare, usare e distribuire Milvus per costruire un'applicazione in base alle vostre esigenze aziendali.</h2></p>
</div>
<div class="doc-home-promotion-wrapper">
  <div class="promotion-content">
    <h2 class="promotion-title">Prova gratuitamente Milvus gestito!</h2>
    <p class="promotion-desc">Provate Zilliz Cloud gratuitamente! Il modo più semplice per provare Milvus!</p>
  </div>
  <div class="cta-wrapper">
   <a class="cta-global" href="https://cloud.zilliz.com/signup">Zilliz Cloud</a> <a class="cta-cn" href="https://cloud.zilliz.com.cn/signup">Zilliz Cloud Cina</a></div>
</div>
<h2 id="Get-Started" class="common-anchor-header">Iniziare<button data-href="#Get-Started" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><div class="card-wrapper">
<div class="start_card_container">
  
   <a href="/docs/it/v2.4.x/install_standalone-docker.md"> <img translate="no" src="https://milvus-docs.s3.us-west-2.amazonaws.com/assets/home_install.svg" alt="icon" />
   </a> <a href="/docs/it/v2.4.x/install_standalone-docker.md"> <p class="link-btn">Installare Milvus</p> </a><p>Scoprite come installare Milvus utilizzando Docker Compose o Kubernetes.</p>
</div>
<div class="start_card_container">
  
   <a href="/docs/it/v2.4.x/quickstart.md"> <img translate="no" src="https://milvus-docs.s3.us-west-2.amazonaws.com/assets/home_quick_start.svg" alt="icon" />
   </a> <a href="/docs/it/v2.4.x/quickstart.md"> <p class="link-btn">Avvio rapido</p> </a><p>Scoprite come eseguire rapidamente Milvus con un codice di esempio.</p>
</div>
<div class="start_card_container">
  
   <a href="/bootcamp"> <img translate="no" src="https://milvus-docs.s3.us-west-2.amazonaws.com/assets/home_bootcamp.svg" alt="icon" />
   </a> <a href="/bootcamp"> <p class="link-btn">Bootcamp</p> </a><p>
  Imparate a costruire applicazioni di ricerca per similarità vettoriale con Milvus.  </p>
</div>
</div>
<h2 id="Recommended-articles" class="common-anchor-header">Articoli consigliati<button data-href="#Recommended-articles" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><div class="doc-home-recommend-section">
<div class="recomment-item">
  <p>Utilizzare</p>
<ul>
<li><a href="/docs/it/v2.4.x/manage-collections.md">Gestire le collezioni</a></li>
<li><a href="/docs/it/v2.4.x/insert-update-delete.md">Inserire, inserire e cancellare</a></li>
<li><a href="/docs/it/v2.4.x/index-vector-fields.md">Indicizzare i campi vettoriali</a></li>
<li><a href="/docs/it/v2.4.x/single-vector-search.md">Ricerca in un singolo vettore</a></li>
<li><a href="/docs/it/v2.4.x/get-and-scalar-query.md">Ottenere e interrogare in modo scalare</a></li>
</ul>
</div>
<div class="recomment-item">
  <p>Distribuire</p>
<ul>
<li><a href="/docs/it/v2.4.x/configure-docker.md">Configurare Milvus</a></li>
<li><a href="/docs/it/v2.4.x/deploy_s3.md">Gestire le dipendenze</a></li>
<li><a href="/docs/it/v2.4.x/eks.md">Distribuire su Cloud</a></li>
<li><a href="/docs/it/v2.4.x/scaleout.md">Scalare un cluster Milvus</a></li>
<li><a href="/docs/it/v2.4.x/monitor_overview.md">Monitorare e avvisare</a></li>
</ul>
</div>
<div class="recomment-item">
  <p>Imparare</p>
<ul>
<li><a href="/docs/it/v2.4.x/system_configuration.md">Configurazione del sistema</a></li>
<li><a href="/docs/it/v2.4.x/architecture_overview.md">Panoramica dell'architettura</a></li>
<li><a href="/docs/it/v2.4.x/index.md">Indice vettoriale</a></li>
<li><a href="/docs/it/v2.4.x/metric.md">Metriche di somiglianza</a></li>
<li><a href="/docs/it/v2.4.x/glossary.md">Glossario</a></li>
</ul>
</div>
</div>
<div class="doc-home-what-is-new">
<h2 id="Whats-new-in-docs" class="common-anchor-header">Cosa c'è di nuovo nei documenti<button data-href="#Whats-new-in-docs" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><p><em>Mar 2024 - Rilascio di Milvus 2.4.0</em></p>
<ul>
<li>Aggiunta una guida su come <a href="/docs/it/v2.4.x/multi-vector-search.md">condurre una ricerca ibrida</a>.</li>
<li>Aggiunta la descrizione dell'<a href="/docs/it/v2.4.x/gpu_index.md">indice GPU</a>.</li>
<li>Aggiunta una guida su come <a href="/docs/it/v2.4.x/embeddings.md">incorporare i dati usando PyMilvus</a>.</li>
<li>Aggiunta la descrizione del <a href="/docs/it/v2.4.x/milvus-cdc-overview.md">CDC di Milvus</a>.</li>
</ul>
</div>
